--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,3 +1,4 @@
 .container
-  = render partial: "./shared/side_bar"
-  = render partial: "./shared/main"
+  = render "./shared/side_bar"
+  = render "./shared/main", group: @group, messages: @messages
+
