--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -104,6 +104,7 @@
         text-align: center;
         line-height: 50px;
         width: 100px;
+        @include hover-opacity();
       }
     }
   }
