Correcting view file for root pass

--- a/app/views/groups/index.haml
+++ b/app/views/groups/index.haml
@@ -1,3 +1,2 @@
 .container
-  = render partial: "./shared/side_bar"
-  = render partial: "./shared/main"
+  = render "./shared/side_bar", group: @group
