--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -17,5 +17,4 @@
             .group-list__group-name
               = group.name
             .group-list__group-messages
-              まだメッセージがありません
-
+              = group.show_last_message
