--- a/app/views/groups/_form.haml
+++ b/app/views/groups/_form.haml
@@ -13,11 +13,11 @@
       = f.text_field :name, class: "chat-group-form__field__input", id: "chat_group_name", placeholder: "グループ名を入力してください", type: "text", value: "#{group.name}"
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      = f.label :user, class: "chat-group-form__label" do
+      = f.label :users, class: "chat-group-form__label" do
         チャットメンバーを追加
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-        %input.chat-group-form__field__input#user-search-field{placeholder: "追加したいユーザー名を入力してください", type: "text", autocomplete: "off"}
+        = f.text_field :users, class: "chat-group-form__field__input", id: "user-search-field", placeholder: "追加したいユーザー名を入力してください", type: "text", autocomplete: "off", value: ""
       #user-search-result
 
   .chat-group-form__field.clearfix
@@ -27,12 +27,12 @@
     .chat-group-form__field--right
       #user-additional-target
         .chat-group-user.clearfix.js-chat-member{id: "chat-group-user-#{current_user.id}"}
-          %input{name: "group[user_ids][]", type: "hidden", value: current_user.id}
+          = f.hidden_field :user_ids, name: "group[user_ids][]", value: current_user.id
           %p.chat-group-user__name=current_user.name
         - group.users.each do |user|
           - if current_user.id != user.id
             .chat-group-user.clearfix.js-chat-member{id: "chat-group-user-#{user.id}"}
-              %input{name: "group[user_ids][]", type: "hidden", value: user.id}
+              = f.hidden_field :user_ids, name: "group[user_ids][]", value: user.id
               %p.chat-group-user__name=user.name
               .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
   .chat-group-form__field.clearfix
